[gd_scene load_steps=7 format=3 uid="uid://35gp3y16del1"]

[ext_resource type="Script" uid="uid://binfdycydsocg" path="res://golem_rock.gd" id="1_eyxwj"]
[ext_resource type="Texture2D" uid="uid://cykuikbpmv6xc" path="res://sprites/GolemBossRock-Sheet.png" id="2_jiia0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jtdpu"]
radius = 22.0

[sub_resource type="Animation" id="Animation_j6x8m"]
resource_name = "Break"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RockArea2D/RockHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AP:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_5j30x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RockArea2D/RockHitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AP:speed_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_01jo6"]
_data = {
&"Break": SubResource("Animation_j6x8m"),
&"RESET": SubResource("Animation_5j30x")
}

[node name="GolemRock" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_eyxwj")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jiia0")
offset = Vector2(0, 5)
hframes = 3
vframes = 2

[node name="RockHurtbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jtdpu")

[node name="RockArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 3

[node name="RockHitbox" type="CollisionShape2D" parent="RockArea2D"]
shape = SubResource("CircleShape2D_jtdpu")

[node name="AP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_01jo6")
}

[connection signal="body_entered" from="RockArea2D" to="." method="_on_rock_area_2d_body_entered"]
[connection signal="animation_finished" from="AP" to="." method="_on_ap_animation_finished"]
